# 42-pyton_module_02

./: justfile  pyproject.toml
src/ex0/: ft_first_exception.py
src/ex1/: ft_raise_exception.py
src/ex2/: ft_different_errors.py
src/ex3/: ft_custom_errors.py
src/ex4/: ft_finally_block.py
